# Code_Like_God

./: README.rst  pyproject.toml
code_like_god/scripts/: Genius_Script.py
