[tool.poetry]
name = "Code_Like_God"
version = "0.1.0"
description = ""
authors = ["PaniMari <me.panina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
say-gen = "code_like_god.scripts.Genius_Script:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
